@@ -69,7 +69,8 @@
         "complex": "cpp",
         "cfenv": "cpp",
         "typeindex": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "unordered_set": "cpp"
     },
     "files.exclude": {
         "**/*.d": true,
