@@ -1,8 +1,12 @@
 #include "BoidMgr.h"
 
 BoidMgr::BoidMgr()
+    : m_separationMultiplier(1.0f),
+      m_alignmentMultiplier(1.0f),
+      m_cohesionMultiplier(1.0f),
+      m_repulsionBorders(-Camera::GetOffset() * 5.0f, sf::Vector2f(Window::GetWidth() - 200.0f, Window::GetHeight()) * 5.0f)
 {
-    SetBoidCount(50);
+    SetBoidCount(200);
     for (auto &boid : m_boids)
     {
         sf::Vector2f randomForce;
@@ -15,21 +19,38 @@ BoidMgr::BoidMgr()
 void BoidMgr::Update()
 {
     CalculateAllVisibleNeighbors();
-    for (const auto &boid : m_boids)
+    for (auto &boid : m_boids)
     {
+        boid.ApplyForce(boid.GetSeparationForce() * boid.GetSeparationMultiplier());
+        boid.ApplyForce(boid.GetAlignmentForce() * boid.GetAlignmentMultiplier());
+        boid.ApplyForce(boid.GetCohesionForce() * boid.GetCohesionMultiplier());
+        boid.ApplyForce(GetRepulsionBorderForce(boid));
+        boid.Update();
     }
+    ClampBoidsToSimulationBox();
 }
 
 void BoidMgr::Draw()
 {
-    for (const auto &boid : m_boids)
+    for (auto &boid : m_boids)
     {
-        boid.DrawBody();
-        // boid.DrawNeighbors();
-        boid.DrawVisibleNeighbors();
         boid.DrawSight();
+    }
+    for (auto &boid : m_boids)
+    {
+        boid.DrawVisibleNeighbors();
+    }
+    for (auto &boid : m_boids)
+    {
         boid.DrawVelocity();
     }
+    for (auto &boid : m_boids)
+    {
+        boid.DrawBody();
+    }
+
+    Camera::DrawRect(m_repulsionBorders, sf::Color::Transparent, true, sf::Color::Red);
+    Camera::DrawRect(m_simulationBox, sf::Color::Transparent, true, sf::Color::Blue);
 }
 
 void BoidMgr::CalculateAllVisibleNeighbors()
@@ -69,6 +90,58 @@ void BoidMgr::CalculateAllVisibleNeighbors()
     }
 }
 
+void BoidMgr::ClampBoidsToSimulationBox()
+{
+    for (auto &boid : m_boids)
+    {
+        sf::Vector2f position = boid.GetPosition();
+        if (position.x < m_simulationBox.left)
+        {
+            position.x = m_simulationBox.left + m_simulationBox.width;
+        }
+        else if (position.x > m_simulationBox.left + m_simulationBox.width)
+        {
+            position.x = m_simulationBox.left;
+        }
+        if (position.y < m_simulationBox.top)
+        {
+            position.y = m_simulationBox.top + m_simulationBox.height;
+        }
+        else if (position.y > m_simulationBox.top + m_simulationBox.height)
+        {
+            position.y = m_simulationBox.top;
+        }
+        boid.SetPosition(position);
+    }
+}
+
+sf::Vector2f BoidMgr::GetRepulsionBorderForce(const Boid &boid) const noexcept
+{
+    const sf::Vector2f &position = boid.GetPosition();
+    auto &box = m_repulsionBorders;
+
+    const auto xRange = std::make_pair(box.left, box.left + box.width);
+    const auto yRange = std::make_pair(box.top, box.top + box.height);
+
+    float fromLeft = Lib::Map(position.x, xRange, std::make_pair(-1.0f, 1.0f));
+    float fromTop = Lib::Map(position.y, yRange, std::make_pair(-1.0f, 1.0f));
+    float fromRight = -fromLeft;
+    float fromBottom = -fromTop;
+
+    fromLeft = Lib::Constrain(fromLeft, -100.0f, 1.0f);
+    fromTop = Lib::Constrain(fromTop, -100.0f, 1.0f);
+    fromRight = Lib::Constrain(fromRight, -100.0f, 1.0f);
+    fromBottom = Lib::Constrain(fromBottom, -100.0f, 1.0f);
+
+    sf::Vector2f force(0.0f, 0.0f);
+    force.x += std::pow(fromLeft - 1.0f, 8.0f);
+    force.x -= std::pow(fromRight - 1.0f, 8.0f);
+    force.y += std::pow(fromTop - 1.0f, 8.0f);
+    force.y -= std::pow(fromBottom - 1.0f, 8.0f);
+
+    return force * 25.0f;
+}
+
 void BoidMgr::SetBoidCount(size_t count)
 {
     while (m_boids.size() != count)
@@ -82,5 +155,29 @@ void BoidMgr::SetBoidCount(size_t count)
         {
             m_boids.pop_back();
         }
+    }
+}
+
+void BoidMgr::SetSeparationMultiplier(float multiplier) noexcept
+{
+    for (auto &boid : m_boids)
+    {
+        boid.SetSeparationMultiplier(multiplier);
+    }
+}
+
+void BoidMgr::SetAlignmentMultiplier(float multiplier) noexcept
+{
+    for (auto &boid : m_boids)
+    {
+        boid.SetAlignmentMultiplier(multiplier);
+    }
+}
+
+void BoidMgr::SetCohesionMultiplier(float multiplier) noexcept
+{
+    for (auto &boid : m_boids)
+    {
+        boid.SetCohesionMultiplier(multiplier);
     }
 }
